package com.ACMD.app.Engine_Layer.Entita;

public enum MType {
    MOSTRO_MARINO,
    COBOLDO,
    BOSS_DRAGO,
    ARMATURA,
    MAGO_OSCURO
}
