package com.ACMD.app.Engine_Layer.Mappa;

public enum Direction {
    EAST,
    WEST,
    NORTH,
    SOUTH   
}
