package com.ACMD.app.Item;
enum ItemType
{

}

class Arma extends Item
{

}

class Armatura extends Item
{

}

class Pozione extends Item
{

}
