package com.ACMD.app.Kernel_Layer.Menu;

import java.util.Map;
import java.util.Vector;

public abstract class Menu 
{
    Map<String, String> commandMap;
  
    public Vector<String> getElement()
    {
        return null;
    }
    public String toString()
    {
        return null;
    }
}
