
package com.ACMD.app.Kernel_Layer.Prompt;

public interface Command{

    public void execute();
}
